--- a/lyx/DocumentoMestre-Trabalho-ProgramacaoPratica.lyx
+++ b/lyx/DocumentoMestre-Trabalho-ProgramacaoPratica.lyx
@@ -1,5 +1,5 @@
-#LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 508
+#LyX 2.3 created this file. For more info see http://www.lyx.org/
+\lyxformat 544
 \begin_document
 \begin_header
 \save_transient_properties true
@@ -42,6 +42,8 @@
 \font_osf false
 \font_sf_scale 100 100
 \font_tt_scale 100 100
+\use_microtype false
+\use_dash_ligatures true
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -84,6 +86,7 @@
 \suppress_date false
 \justification true
 \use_refstyle 0
+\use_minted 0
 \index Índice
 \shortcut idx
 \color #008000
@@ -98,7 +101,10 @@
 \tocdepth 2
 \paragraph_separation indent
 \paragraph_indentation default
-\quotes_language english
+\is_math_indent 0
+\math_numbering_side default
+\quotes_style english
+\dynamic_quotes 0
 \papercolumns 1
 \papersides 1
 \paperpagestyle fancy
@@ -115,7 +121,7 @@
 \align block
 \begin_inset CommandInset include
 LatexCommand include
-filename "Cap0-Introducao-Escopo-Objetivos.lyx"
+filename "Cap1-Introducao-Escopo-Objetivos - Atualizado.lyx"
 
 \end_inset
 
@@ -126,7 +132,7 @@ filename "Cap0-Introducao-Escopo-Objetivos.lyx"
 \align block
 \begin_inset CommandInset include
 LatexCommand include
-filename "Cap1-Especificacao.lyx"
+filename "Cap2-Especificacao - Atualizado.lyx"
 
 \end_inset
 
@@ -137,7 +143,7 @@ filename "Cap1-Especificacao.lyx"
 \align block
 \begin_inset CommandInset include
 LatexCommand include
-filename "Cap2-Elaboracao.lyx"
+filename "Cap3-Elaboracao - Atualizado.lyx"
 
 \end_inset
 
@@ -148,7 +154,7 @@ filename "Cap2-Elaboracao.lyx"
 \align block
 \begin_inset CommandInset include
 LatexCommand include
-filename "Cap3-AnaliseOrientadaAObjeto.lyx"
+filename "Cap4-AnaliseOrientadaAObjeto - Atualizado.lyx"
 
 \end_inset
 
@@ -159,28 +165,7 @@ filename "Cap3-AnaliseOrientadaAObjeto.lyx"
 \align block
 \begin_inset CommandInset include
 LatexCommand include
-filename "Cap4-Projeto.lyx"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\align block
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-\align block
-\begin_inset CommandInset include
-LatexCommand include
-filename "Cap5-ProjetoOrientadoAObjeto.lyx"
-
-\end_inset
-
-
-\end_layout
+filename "Cap5-Projeto - Atualizado.lyx"
 
 \end_inset
 
@@ -273,6 +258,8 @@ filename "Cap-Apendice_A.lyx"
 \begin_inset CommandInset index_print
 LatexCommand printindex
 type "idx"
+name "Índice"
+literal "true"
 
 \end_inset
 
