--- a/lyx/Cap4-AnaliseOrientadaAObjeto - Atualizado.lyx
+++ b/lyx/Cap4-AnaliseOrientadaAObjeto - Atualizado.lyx
@@ -183,7 +183,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename diagramas/Imagens/Diagrama de Classe.png
+	filename imagens/Diagrama de Classe.png
 	lyxscale 15
 	width 100text%
 
