--- a/lyx/Cap5-Projeto - Atualizado.lyx
+++ b/lyx/Cap5-Projeto - Atualizado.lyx
@@ -247,7 +247,7 @@ Recursos
 
 \begin_deeper
 \begin_layout Itemize
-Esse projeto necessitará de uma máquina computacional com HD, processador,
+Esse projeto necessitará de uma máquina computacional com SSD, processador,
  um arquivo .xml para entrada de dados além do teclado para o mesmo fim e
  o monitor para a saída de dados e plots.
  
