Renomeamos os diagramas e geramos o arquivo mestre no lyx

--- a/versao-2/doc/ManualDoDesenvolvedor/Cap1-Concepcao.lyx
+++ b/versao-2/doc/ManualDoDesenvolvedor/Cap1-Concepcao.lyx
@@ -2171,7 +2171,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename imagens/DiagramaDeCasoDeUsoEspecífico.png
+	filename imagens/DiagramaDeCasoDeUsoEspecifico.png
 	width 100text%
 
 \end_inset
